--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
       background-color: #f8d7da;
       color: #721c24;
       border: 1px solid #f5c6cb;
-      white-space: pre-line;
     }
     .alert-yellow {
       background-color: #fff3cd;
@@ -234,165 +233,6 @@
     <div id="mensaje-exito">✅ Enviado exitosamente</div>
   </div>
 
-  <script>
-    const URL_GET = "https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec";
-
-    function actualizarFechaHora() {
-      const now = new Date();
-      const dias = ['Domingo','Lunes','Martes','Miércoles','Jueves','Viernes','Sábado'];
-      const meses = ['Enero','Febrero','Marzo','Abril','Mayo','Junio','Julio','Agosto','Septiembre','Octubre','Noviembre','Diciembre'];
-      const diaSemana = dias[now.getDay()];
-      const dia = now.getDate();
-      const mes = meses[now.getMonth()];
-      const anio = now.getFullYear();
-      let hora = now.getHours();
-      const minutos = String(now.getMinutes()).padStart(2, '0');
-      const segundos = String(now.getSeconds()).padStart(2, '0');
-      const ampm = hora >= 12 ? 'P.M' : 'A.M';
-      hora = hora % 12 || 12;
-      const fechaFormateada = `${diaSemana}, ${dia} de ${mes} de ${anio}, ${hora}:${minutos}:${segundos} ${ampm}`;
-      document.getElementById("datetime").innerText = fechaFormateada;
-    }
-    setInterval(actualizarFechaHora, 1000);
-    actualizarFechaHora();
-
-    async function buscarDatosConductor() {
-      const rut = document.getElementById("rut-conductor").value.trim();
-      const contenedor = document.getElementById("datos-conductor");
-      const manualSection = document.getElementById("manual-conductor-section");
-      if (!rut) {
-        contenedor.innerText = "";
-        manualSection.style.display = "none";
-        return;
-      }
-      contenedor.innerHTML = '<span class="spinner"></span>Buscando...';
-      try {
-        const response = await fetch(URL_GET + "?tipo=personal&id=" + encodeURIComponent(rut));
-        const data = await response.json();
-        if (data.error) {
-          contenedor.innerText = "❌ No encontrado.";
-          manualSection.style.display = "block";
-        } else {
-          contenedor.innerText = data.NOMBRE || "(sin nombre)";
-          manualSection.style.display = "none";
-        }
-      } catch {
-        contenedor.innerText = "❌ Error al buscar.";
-        manualSection.style.display = "block";
-      }
-    }
-
-    async function buscarDatosEquipo() {
-      const id = document.getElementById("numero-equipo").value.trim();
-      const familiaBox = document.getElementById("familia-equipo");
-      const statusBox = document.getElementById("status-equipo");
-      const obsBox = document.getElementById("observaciones-equipo");
-      const obsManual = document.getElementById("observaciones-manual");
-      const alerta = document.getElementById("alerta-ingreso");
-      const alertaAmarilla = document.getElementById("alerta-carga-extra");
-      if (!id) {
-        familiaBox.innerText = statusBox.innerText = obsBox.innerText = "";
-        alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
-        return;
-      }
-      const loading = '<span class="spinner"></span>Buscando...';
-      familiaBox.innerHTML = statusBox.innerHTML = obsBox.innerHTML = loading;
-      alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
-      try {
-        const response = await fetch(URL_GET + "?tipo=equipo&id=" + encodeURIComponent(id));
-        const data = await response.json();
-        if (data.error) {
-          familiaBox.innerText = statusBox.innerText = obsBox.innerText = "❌ No encontrado";
-        } else {
-          familiaBox.innerText = data.FAMILIA || "";
-          const status = (data["STATUS ✎"] || "").toLowerCase();
-          if (status === "operativo") {
-            statusBox.innerText = "❌ No habilitado.";
-            obsBox.innerText = "⚠️ Observaciones requeridas";
-            alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "block";
-          } else {
-            statusBox.innerText = "✅ Habilitado.";
-            const observaciones = data.OBSERVACIONES?.trim();
-            obsBox.innerText = observaciones || "Equipo fuera de Operación, ya sea por inoperatividad o revisión en taller.";
-            alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
-          }
-        }
-      } catch {
-        familiaBox.innerText = statusBox.innerText = obsBox.innerText = "❌ Error";
-        alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
-      }
-    }
-
-    function mostrarErrorCampo(campo, mensaje) {
-      const errorPrevio = campo.parentElement.querySelector('.mensaje-error');
-      if (errorPrevio) errorPrevio.remove();
-
-      const error = document.createElement("div");
-      error.className = "mensaje-error";
-      error.innerText = mensaje;
-      campo.parentElement.appendChild(error);
-      campo.style.border = "2px solid #c62828";
-      campo.focus();
-
-      setTimeout(() => {
-        error.remove();
-        campo.style.border = "";
-      }, 3000);
-    }
-
-    function enviarFormulario() {
-      const rutInput = document.getElementById("rut-conductor");
-      const nombreManualInput = document.getElementById("nombre-manual");
-      const datosConductor = document.getElementById("datos-conductor").innerText.trim();
-      const equipoInput = document.getElementById("numero-equipo");
-      const familia = document.getElementById("familia-equipo").innerText.trim();
-      const habilitado = document.getElementById("status-equipo").innerText.trim();
-      const observacionesManualInput = document.getElementById("observaciones-manual");
-      const observacionesEquipo = document.getElementById("observaciones-equipo").innerText.trim();
-      const guardiaInput = document.getElementById("guardia");
-
-      const rut = rutInput.value.trim();
-      const nombreManual = nombreManualInput.value.trim();
-      const nombre = datosConductor.includes("No encontrado") ? nombreManual : datosConductor;
-      const equipo = equipoInput.value.trim();
-      const observaciones = habilitado.includes("No habilitado") ? observacionesManualInput.value.trim() : observacionesEquipo;
-      const guardia = guardiaInput.value.trim();
-
-      if (!rut) return mostrarErrorCampo(rutInput, "⚠️ Favor completar este campo");
-      if (!nombre) return mostrarErrorCampo(nombreManualInput, "⚠️ Favor completar este campo");
-      if (!equipo) return mostrarErrorCampo(equipoInput, "⚠️ Favor completar este campo");
-      if (habilitado.includes("No habilitado") && !observaciones) return mostrarErrorCampo(observacionesManualInput, "⚠️ Favor completar este campo");
-      if (!guardia) return mostrarErrorCampo(guardiaInput, "⚠️ Favor completar este campo");
-
-      const formData = new FormData();
-      formData.append("entry.675531615", rut);
-      formData.append("entry.851525222", nombre);
-      formData.append("entry.1413809422", equipo);
-      formData.append("entry.783685052", familia);
-      formData.append("entry.10343893", habilitado);
-      formData.append("entry.2133373249", observaciones);
-      formData.append("entry.234162856", guardia);
-
-      const overlay = document.getElementById("overlay");
-      const mensaje = document.getElementById("mensaje-exito");
-      overlay.style.display = "flex";
-      mensaje.style.display = "none";
-
-      fetch("https://docs.google.com/forms/d/e/1FAIpQLSf3ADvFtCeFHlm7RzOtNuuuxZkzjCgFnrvw7KM2d3DIPOGumg/formResponse", {
-        method: "POST",
-        mode: "no-cors",
-        body: formData
-      }).then(() => {
-        mensaje.style.display = "block";
-        setTimeout(() => {
-          window.location.href = "https://acciona-airport.github.io/Ingresos-base-acciona/";
-        }, 2000);
-      }).catch(error => {
-        overlay.style.display = "none";
-        alert("❌ Error al enviar el formulario.");
-        console.error(error);
-      });
-    }
-  </script>
+  <!-- Aquí puedes mantener tu <script> actual sin cambios -->
 </body>
 </html>
